Bug 1142964 - Fix ICE tiebreaker on Windows. r=bwc

--HG--
extra : transplant_source : %7E%1E%92%E1%EC%C4_9%5B%7B%92xV%90%B6e%835%0D%23